k8s.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - name: hello
          image: reju/react-ingress-test-app:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
                path: "/"
                port: 80
            initialDelaySeconds: 15
            periodSeconds: 5
      restartPolicy: Always
---
    kind: Service
    apiVersion: v1
    metadata:
      name: hello
    spec:
      type: NodePort
      ports:
        - port: 80
          targetPort: 80
          protocol: TCP
          nodePort: 32000
      selector:
        app: hello
