ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"

spec:
  rules:
    - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: hello
            port:
              number: 80

      - path: /app
        pathType: ImplementationSpecific
        backend:
          service:
            name: hello
            port:
              number: 80

      - path: /app/contact
        pathType: ImplementationSpecific
        backend:
          service:
            name: hello
            port:
              number: 80

      - path: /app/about
        pathType: ImplementationSpecific
        backend:
          service:
            name: hello
            port:
              number: 80
